RESOLVED FIXED 233515
GraphicsContextGLANGLE.cpp has platform specific code
https://bugs.webkit.org/show_bug.cgi?id=233515
Summary GraphicsContextGLANGLE.cpp has platform specific code
Kimmo Kinnunen
Reported 2021-11-26 00:25:45 PST
GraphicsContextGLANGLE.cpp has platform specific code This should be invoked through virtual functions and the code should be moved to the platform specific implementations This way platform specific implementation like GraphicsContextGLOpenGL Cocoa flavour can be in future be called GraphicsContextGLCocoa, since GraphicsContextGLOpenGL and GraphicsContextGLANGLE would be also separate classes.
Attachments
Patch (9.63 KB, patch)
2021-11-26 00:30 PST, Kimmo Kinnunen
no flags
Patch (14.93 KB, patch)
2021-11-26 03:27 PST, Kimmo Kinnunen
no flags
Patch (23.27 KB, patch)
2021-11-26 05:19 PST, Kimmo Kinnunen
ews-feeder: commit-queue-
Patch (23.27 KB, patch)
2021-11-26 05:24 PST, Kimmo Kinnunen
ews-feeder: commit-queue-
Patch (23.38 KB, patch)
2021-11-26 05:53 PST, Kimmo Kinnunen
no flags
Patch (23.38 KB, patch)
2021-11-26 05:58 PST, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-11-26 00:30:35 PST
Kimmo Kinnunen
Comment 2 2021-11-26 03:27:56 PST
Kimmo Kinnunen
Comment 3 2021-11-26 05:19:18 PST
Kimmo Kinnunen
Comment 4 2021-11-26 05:24:15 PST
Kimmo Kinnunen
Comment 5 2021-11-26 05:53:35 PST
Kimmo Kinnunen
Comment 6 2021-11-26 05:58:21 PST
EWS
Comment 7 2021-11-29 01:41:26 PST
Committed r286205 (244587@main): <https://commits.webkit.org/244587@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445196 [details].
Radar WebKit Bug Importer
Comment 8 2021-11-29 01:42:22 PST
Fujii Hironori
Comment 9 2021-11-29 12:51:05 PST
This change broke WinCairo WebGL tests. Filed: Bug 233589 – REGRESSION(r286205) [WinCairo] WebGL tests are failing
Note You need to log in before you can comment on or make changes to this bug.