GraphicsContextGLANGLE.cpp has platform specific code https://bugs.webkit.org/show_bug.cgi?id=233515

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-11-29
Reviewed by Antti Koivisto.

GraphicsContextGLANGLE.cpp has platform specific code for modifying
the display buffer backing storage (IOSurface on Cocoa,
normal texture on TextureMapper variants).
This modification should be done through the reshapeDisplayBufferBacking
method call for all implementations, so that in the future
GraphicsContextGLOpenGL ANGLE variant can be renamed GraphicsContextGLANGLE
and still invoke that functionality.

No new tests, refactor.

* platform/graphics/angle/GraphicsContextGLANGLE.cpp:
(WebCore::GraphicsContextGLOpenGL::reshapeFBOs):
(WebCore::GraphicsContextGLOpenGL::platformReleaseThreadResources): Deleted.
* platform/graphics/cocoa/GraphicsContextGLCocoa.mm:
(WebCore::GraphicsContextGLOpenGL::bindDisplayBufferBacking):
* platform/graphics/opengl/GraphicsContextGLOpenGL.h:
* platform/graphics/texmap/GraphicsContextGLTextureMapperANGLE.cpp: Added.
(WebCore::GraphicsContextGLOpenGL::reshapeDisplayBufferBacking):
(WebCore::GraphicsContextGLOpenGL::platformReleaseThreadResources):


Canonical link: https://commits.webkit.org/244587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286205 268f45cc-cd09-0410-ab3c-d52691b4dbfc