Source/WebCore/platform/graphics/nicosia/texmap/NicosiaGCGLANGLELayer.cpp
@@ -130,11 +130,12 @@ std::unique_ptr<GCGLANGLELayer::ANGLEContext> GCGLANGLELayer::ANGLEContext::crea
     }
     LOG(WebGL, "Got EGLContext");
 
-    return std::unique_ptr<ANGLEContext>(new ANGLEContext(display, context, EGL_NO_SURFACE));
+    return std::unique_ptr<ANGLEContext>(new ANGLEContext(display, config, context, EGL_NO_SURFACE));
 }
 
-GCGLANGLELayer::ANGLEContext::ANGLEContext(EGLDisplay display, EGLContext context, EGLSurface surface)
+GCGLANGLELayer::ANGLEContext::ANGLEContext(EGLDisplay display, EGLConfig config, EGLContext context, EGLSurface surface)
     : m_display(display)
+    , m_config(config)
     , m_context(context)
     , m_surface(surface)
 {
@@ -166,6 +167,16 @@ PlatformGraphicsContextGL GCGLANGLELayer::ANGLEContext::platformContext() const
     return m_context;
 }
 
+PlatformGraphicsContextGLDisplay GCGLANGLELayer::ANGLEContext::platformDisplay() const
+{
+    return m_display;
+}
+
+PlatformGraphicsContextGLConfig GCGLANGLELayer::ANGLEContext::platformConfig() const
+{
+    return m_config;
+}
+
 GCGLANGLELayer::GCGLANGLELayer(GraphicsContextGLOpenGL& context)
     : GCGLLayer(context)
     , m_angleContext(ANGLEContext::createContext())
@@ -184,6 +195,18 @@ bool GCGLANGLELayer::makeContextCurrent()
 }
 
 PlatformGraphicsContextGL GCGLANGLELayer::platformContext() const
+{
+    ASSERT(m_angleContext);
+    return m_angleContext->platformContext();
+}
+
+PlatformGraphicsContextGLDisplay GCGLANGLELayer::platformDisplay() const
+{
+    ASSERT(m_angleContext);
+    return m_angleContext->platformDisplay();
+}
+
+PlatformGraphicsContextGLConfig GCGLANGLELayer::platformConfig() const
 {
     ASSERT(m_angleContext);
     return m_angleContext->platformContext();
