Source/WebCore/platform/graphics/texmap/TextureMapperGCGLPlatformLayer.h
@@ -39,6 +39,8 @@ public:
 
     bool makeContextCurrent();
     PlatformGraphicsContextGL platformContext() const;
+    PlatformGraphicsContextGLDisplay platformDisplay() const;
+    PlatformGraphicsContextGLConfig platformConfig() const;
 
 #if USE(COORDINATED_GRAPHICS)
     RefPtr<TextureMapperPlatformLayerProxy> proxy() const override;
